force-app/main/default/objects/Pesquisa__c/Pesquisa__c.object-meta.xml
<CustomObject>
    <description>Pesquisa com contas</description>
    <label>Pesquisa</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pesquisas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>