force-app/main/default/objects/Pesquisa__c/fields/Caminhao_Frota_agregada__c.field-meta.xml
<CustomField>
    <fullName>Caminhao_Frota_agregada__c</fullName>
    <label>Caminhão - Frota agregada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>