force-app/main/default/objects/Pesquisa__c/fields/Caminhao_Frota_propria__c.field-meta.xml
<CustomField>
    <fullName>Caminhao_Frota_propria__c</fullName>
    <label>Caminhão - Frota própria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>