force-app/main/default/objects/Pesquisa__c/fields/Caminhao_Frota_rastreada__c.field-meta.xml
<CustomField>
    <fullName>Caminhao_Frota_rastreada__c</fullName>
    <label>Caminhão - Frota rastreada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>