force-app/main/default/objects/Pesquisa__c/fields/Carreta_Frota_rastreada__c.field-meta.xml
<CustomField>
    <fullName>Carreta_Frota_rastreada__c</fullName>
    <label>Carreta - Frota rastreada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>