force-app/main/default/objects/Pesquisa__c/fields/Carta_enviada__c.field-meta.xml
<CustomField>
    <fullName>Carta_enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carta enviada?</label>
    <type>Checkbox</type>
</CustomField>