force-app/main/default/objects/Pesquisa__c/fields/Carta_ou_visita__c.field-meta.xml
<CustomField>
    <fullName>Carta_ou_visita__c</fullName>
    <label>Carta ou visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARTA</fullName>
            </value>
            <value>
                <fullName>VISITA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>