force-app/main/default/objects/Pesquisa__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <formula>Nome_da_Conta__r.Enderecos_Principal_Cidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cidade</label>
    <type>Text</type>
</CustomField>