force-app/main/default/objects/Pesquisa__c/fields/Cidade_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cidade_Lead__c</fullName>
    <formula>Lead__r.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cidade</label>
    <type>Text</type>
</CustomField>