force-app/main/default/objects/Pesquisa__c/fields/Cliente_Conquistado__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Conquistado__c</fullName>
    <label>Cliente Conquistado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>