force-app/main/default/objects/Pesquisa__c/fields/Comprou_com_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Comprou_com_concorrente__c</fullName>
    <label>Comprou com concorrente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>