force-app/main/default/objects/Pesquisa__c/fields/Concorrente__c.field-meta.xml
<CustomField>
    <fullName>Concorrente__c</fullName>
    <label>Concorrente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoTrack</fullName>
            </value>
            <value>
                <fullName>BaySat</fullName>
            </value>
            <value>
                <fullName>GolSat</fullName>
            </value>
            <value>
                <fullName>Ituran</fullName>
            </value>
            <value>
                <fullName>Onix</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Porto Seguro</fullName>
            </value>
            <value>
                <fullName>Positron</fullName>
            </value>
            <value>
                <fullName>Zatix</fullName>
            </value>
            <value>
                <fullName>X-Global</fullName>
            </value>
            <value>
                <fullName>Ceabs</fullName>
            </value>
            <value>
                <fullName>Golden Sat</fullName>
            </value>
            <value>
                <fullName>Tracker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>