force-app/main/default/objects/Pesquisa__c/fields/Contratos__c.field-meta.xml
<CustomField>
    <fullName>Contratos__c</fullName>
    <label>Contratos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>