force-app/main/default/objects/Pesquisa__c/fields/DMV__c.field-meta.xml
<CustomField>
    <fullName>DMV__c</fullName>
    <formula>text(Owner:User.DMV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMV</label>
    <type>Text</type>
</CustomField>