force-app/main/default/objects/Pesquisa__c/fields/E_um_forte_influenciador_regiao__c.field-meta.xml
<CustomField>
    <fullName>E_um_forte_influenciador_regiao__c</fullName>
    <label>É um forte influenciador da região?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>