force-app/main/default/objects/Pesquisa__c/fields/Faz_parte_qual_associacao__c.field-meta.xml
<CustomField>
    <fullName>Faz_parte_qual_associacao__c</fullName>
    <label>Faz parte de qual associação?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anacc</fullName>
            </value>
            <value>
                <fullName>Apronorte</fullName>
            </value>
            <value>
                <fullName>APVEC</fullName>
            </value>
            <value>
                <fullName>ASTRAN</fullName>
            </value>
            <value>
                <fullName>ATRAC</fullName>
            </value>
            <value>
                <fullName>AUTO TRUCK</fullName>
            </value>
            <value>
                <fullName>C.T.G.CARGAS SAO CAETANO DO SUL</fullName>
            </value>
            <value>
                <fullName>COOP. DE TRANSP. ROD. DO ABC</fullName>
            </value>
            <value>
                <fullName>CTR Rondônia</fullName>
            </value>
            <value>
                <fullName>Nenhuma</fullName>
            </value>
            <value>
                <fullName>Outras</fullName>
            </value>
            <value>
                <fullName>PROTEAUTO</fullName>
            </value>
            <value>
                <fullName>RODOSAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>