force-app/main/default/objects/Pesquisa__c/fields/Finalizado__c.field-meta.xml
<CustomField>
    <fullName>Finalizado__c</fullName>
    <label>Status da Renegociação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não Iniciado</fullName>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>