force-app/main/default/objects/Pesquisa__c/fields/Iscas_convertidas__c.field-meta.xml
<CustomField>
    <fullName>Iscas_convertidas__c</fullName>
    <label>Iscas convertidas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>