force-app/main/default/objects/Pesquisa__c/fields/Leve_Frota_agregada__c.field-meta.xml
<CustomField>
    <fullName>Leve_Frota_agregada__c</fullName>
    <label>Leve - Frota agregada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>