force-app/main/default/objects/Pesquisa__c/fields/Leve_Termino_contrato_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Leve_Termino_contrato_concorrente__c</fullName>
    <label>Leve - Término contrato concorrente</label>
    <type>Date</type>
</CustomField>