force-app/main/default/objects/Pesquisa__c/fields/Linha_Amarela_Concorrente_principal__c.field-meta.xml
<CustomField>
    <fullName>Linha_Amarela_Concorrente_principal__c</fullName>
    <label>Linha Amarela - Concorrente principal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTOTRAC</fullName>
            </value>
            <value>
                <fullName>BRIDGESTONE</fullName>
            </value>
            <value>
                <fullName>BYSAT</fullName>
            </value>
            <value>
                <fullName>CARSYSTEM</fullName>
            </value>
            <value>
                <fullName>CONTINENTAL</fullName>
            </value>
            <value>
                <fullName>FIRESTONE</fullName>
            </value>
            <value>
                <fullName>GOLSAT</fullName>
            </value>
            <value>
                <fullName>GOODYEAR</fullName>
            </value>
            <value>
                <fullName>ITURAN</fullName>
            </value>
            <value>
                <fullName>LINK</fullName>
            </value>
            <value>
                <fullName>ONIX</fullName>
            </value>
            <value>
                <fullName>OUTRA</fullName>
            </value>
            <value>
                <fullName>PIRELLI</fullName>
            </value>
            <value>
                <fullName>POINTER</fullName>
            </value>
            <value>
                <fullName>PORTO SEGURO</fullName>
            </value>
            <value>
                <fullName>POSITRON</fullName>
            </value>
            <value>
                <fullName>TRACKER</fullName>
            </value>
            <value>
                <fullName>ZATIX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>