force-app/main/default/objects/Pesquisa__c/fields/Linha_Amarela_Frota_agregada__c.field-meta.xml
<CustomField>
    <fullName>Linha_Amarela_Frota_agregada__c</fullName>
    <label>Linha Amarela - Frota agregada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>