force-app/main/default/objects/Pesquisa__c/fields/Linha_Amarela_Frota_propria__c.field-meta.xml
<CustomField>
    <fullName>Linha_Amarela_Frota_propria__c</fullName>
    <label>Linha Amarela - Frota própria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>