force-app/main/default/objects/Pesquisa__c/fields/Linha_Amarela_Situacao_frota_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Linha_Amarela_Situacao_frota_concorrente__c</fullName>
    <label>Linha Amarela - Situação da frota</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aumentando</fullName>
            </value>
            <value>
                <fullName>Diminuindo</fullName>
            </value>
            <value>
                <fullName>Mantendo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>