force-app/main/default/objects/Pesquisa__c/fields/Linha_Amarela_Termino_contrato_concorre__c.field-meta.xml
<CustomField>
    <fullName>Linha_Amarela_Termino_contrato_concorre__c</fullName>
    <label>L.Amarela Término contrato concorrente</label>
    <type>Date</type>
</CustomField>