force-app/main/default/objects/Pesquisa__c/fields/Locacao__c.field-meta.xml
<CustomField>
    <fullName>Locacao__c</fullName>
    <label>Locação Atual</label>
    <length>200</length>
    <type>Text</type>
</CustomField>