force-app/main/default/objects/Pesquisa__c/fields/Monitoramento__c.field-meta.xml
<CustomField>
    <fullName>Monitoramento__c</fullName>
    <label>Monitoramento Atual</label>
    <length>200</length>
    <type>Text</type>
</CustomField>