force-app/main/default/objects/Pesquisa__c/fields/Moto_Frota_agregada__c.field-meta.xml
<CustomField>
    <fullName>Moto_Frota_agregada__c</fullName>
    <label>Moto - Frota agregada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>