force-app/main/default/objects/Pesquisa__c/fields/Moto_Termino_contrato_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Moto_Termino_contrato_concorrente__c</fullName>
    <label>Moto - Término contrato concorrente</label>
    <type>Date</type>
</CustomField>