force-app/main/default/objects/Pesquisa__c/fields/Mudan_a_perfil_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Mudan_a_perfil_de_carga__c</fullName>
    <label>Mudança perfil de carga</label>
    <type>TextArea</type>
</CustomField>