force-app/main/default/objects/Pesquisa__c/fields/Negociado__c.field-meta.xml
<CustomField>
    <fullName>Negociado__c</fullName>
    <label>Negociado</label>
    <length>200</length>
    <type>Text</type>
</CustomField>