force-app/main/default/objects/Pesquisa__c/fields/Nome_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome da Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pesquisas</relationshipLabel>
    <relationshipName>Pesquisas</relationshipName>
    <type>Lookup</type>
</CustomField>