force-app/main/default/objects/Pesquisa__c/fields/Nome_Tipo__c.field-meta.xml
<CustomField>
    <fullName>Nome_Tipo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome Tipo</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Pesquisas</relationshipLabel>
    <relationshipName>Pesquisas</relationshipName>
    <type>Lookup</type>
</CustomField>