force-app/main/default/objects/Pesquisa__c/fields/Onibus_Situacao_frota__c.field-meta.xml
<CustomField>
    <fullName>Onibus_Situacao_frota__c</fullName>
    <label>Ônibus - Situação da frota</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aumentando</fullName>
            </value>
            <value>
                <fullName>Diminuindo</fullName>
            </value>
            <value>
                <fullName>Mantendo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>