force-app/main/default/objects/Pesquisa__c/fields/Onibus_Termino_contrato_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Onibus_Termino_contrato_concorrente__c</fullName>
    <label>Ônibus - Término contrato concorrente</label>
    <type>Date</type>
</CustomField>