force-app/main/default/objects/Pesquisa__c/fields/Oportunidade_renegociada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_renegociada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade renegociada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pesquisas</relationshipLabel>
    <relationshipName>Pesquisas</relationshipName>
    <type>Lookup</type>
</CustomField>