force-app/main/default/objects/Pesquisa__c/fields/Outros_concorrentes__c.field-meta.xml
<CustomField>
    <fullName>Outros_concorrentes__c</fullName>
    <label>Outros concorrentes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>