force-app/main/default/objects/Pesquisa__c/fields/Percep_o_valor__c.field-meta.xml
<CustomField>
    <fullName>Percep_o_valor__c</fullName>
    <label>Percepção valor</label>
    <type>TextArea</type>
</CustomField>