force-app/main/default/objects/Pesquisa__c/fields/Perfil_de_uso_da_ferramenta__c.field-meta.xml
<CustomField>
    <fullName>Perfil_de_uso_da_ferramenta__c</fullName>
    <label>Perfil de uso da ferramenta</label>
    <type>TextArea</type>
</CustomField>