force-app/main/default/objects/Pesquisa__c/fields/Placas_Convertidas__c.field-meta.xml
<CustomField>
    <fullName>Placas_Convertidas__c</fullName>
    <label>Placas Convertidas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>