force-app/main/default/objects/Pesquisa__c/fields/Potencial_de_Placas__c.field-meta.xml
<CustomField>
    <fullName>Potencial_de_Placas__c</fullName>
    <label>Potencial de Placas Leves</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>