force-app/main/default/objects/Pesquisa__c/fields/Potencial_de_Placas_Chassi__c.field-meta.xml
<CustomField>
    <fullName>Potencial_de_Placas_Chassi__c</fullName>
    <label>Potencial de Placas Pesado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>