force-app/main/default/objects/Pesquisa__c/fields/Potencial_isca_DCT__c.field-meta.xml
<CustomField>
    <fullName>Potencial_isca_DCT__c</fullName>
    <label>Potencial de isca DCT</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>