force-app/main/default/objects/Pesquisa__c/fields/Potencial_isca_RTN__c.field-meta.xml
<CustomField>
    <fullName>Potencial_isca_RTN__c</fullName>
    <label>Potencial de isca RTN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>