force-app/main/default/objects/Pesquisa__c/fields/Potencial_Total_de_Placas__c.field-meta.xml
<CustomField>
    <fullName>Potencial_Total_de_Placas__c</fullName>
    <label>Potencial Total de Placas</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>