force-app/main/default/objects/Pesquisa__c/fields/Prazo__c.field-meta.xml
<CustomField>
    <fullName>Prazo__c</fullName>
    <formula>Nome_Tipo__r.Prazo_catalogo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>