force-app/main/default/objects/Pesquisa__c/fields/Prazo_para_finalizar__c.field-meta.xml
<CustomField>
    <fullName>Prazo_para_finalizar__c</fullName>
    <label>Prazo para finalizar</label>
    <type>Date</type>
</CustomField>