force-app/main/default/objects/Pesquisa__c/fields/Proprietario_conta__c.field-meta.xml
<CustomField>
    <fullName>Proprietario_conta__c</fullName>
    <formula>Nome_da_Conta__r.Owner.FirstName &amp; &quot; &quot; &amp; Nome_da_Conta__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietário da conta</label>
    <type>Text</type>
</CustomField>